--- a/package.json
+++ b/package.json
@@ -20,13 +20,22 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "node-sass": "^7.0.1",
+    "nprogress": "^0.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "sass": "^1.49.9",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "lodash-es": "^4.17.21",
+    "svelte-countup": "^0.2.6",
+    "svelte-progress-bar": "^3.0.2",
+    "ua-parser-js": "^1.0.2"
+  }
 }
